# hs4uc

./: Dockerfile  alembic.ini  analyze_data.py  database.py  docker-compose.yaml  import_data.py  models.py  pyproject.toml  readme.md
app/: analyze_data.py  database.py  import_data.py  main.py  models.py
migrations/: env.py
migrations/versions/: 2024_11_28_1203-53750a299101_add_count_by_schools_table.py  2024_11_28_1248-92cc09b8533a_add_year_and_campus_fields.py  2024_11_28_2011-77cdffd2045e_add_school_tables.py  2024_11_28_2027-285bff27284b_fix_updated_at.py  2024_11_28_2030-a5f7918c7251_fix_school_fk_name.py  2024_11_28_2244-b8e559e15732_add_hs_grad_race_column.py  2024_11_29_1047-9ea6729d0766_add_subrace_to_hs_populations.py  2024_11_29_1156-400975293af0_add_school_category.py
