[tool.poetry]
name = "admission"
version = "0.1.0"
description = ""
authors = ["Jie Han"]
readme = "README.md"

[tools.setuptools]
packages = ["src"]

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.36"
pandas = "^2.2.3"
alembic = "^1.14.0"
psycopg2 = "^2.9.10"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
